--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?mbffwudt#1" target="_blank">首页</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/1?dhuyfepdn" target="_blank">动态网</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/2?mnrqyfm" target="_blank">大纪元</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/4?pvcxpsdmo" target="_blank">看中国</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/pHh5q?qotlreeb" target="_blank">新生网</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/tktpt?npdtnkrz" target="_blank">阿波罗网</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/Mjpvu?twvxtyuc" target="_blank">干净世界</a> | <a href="https://d124e4v75n9sum.cloudfront.net/10?moaaqdaun" target="_blank">退党服务</a> | <a href="https://d15m60lsma25jk.cloudfront.net/Rffqf?fugykf" target="_blank">明慧广播</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/nw9Vn?vipaoc" target="_blank">传奇时代</a> | <a href="https://d8jw662akk94j.cloudfront.net/AF9AG?nqvfpct" target="_blank">新境界影视</a> | <a href="https://d1lulvfep8g527.cloudfront.net/zqMQA?vzgcdt" target="_blank">文昭谈论</a> | <a href="https://d3vg08phoazui6.cloudfront.net/7?aekxx" target="_blank">明慧</a></p><p><a href="https://djwddd4nnr0na.cloudfront.net/9?qrizox" target="_blank">大法</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/3?ibtveerg" target="_blank">新唐人</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/obAhT?jonuz" target="_blank">人民报</a> | <a href="https://doqmgyop4u892.cloudfront.net/xXNHu?laqzru" target="_blank">放光明</a> | <a href="https://d2zw89wk00y815.cloudfront.net/5?diljjej" target="_blank">新纪元</a> | <a href="https://d3caox32lipp7h.cloudfront.net/6?gzdmsvey" target="_blank">希望之声</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/11?stahtism" target="_blank">无界网络</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/Pueji?zhjqiqen" target="_blank">追查国际</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/16?vmlsibfs" target="_blank">明慧之窗</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/LdvzZ?tulqtee" target="_blank">细语人生</a> | <a href="https://d3siwajeg0khti.cloudfront.net/fBn3r?tqjfnzj" target="_blank">新世纪影视</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/PUWMb?owctnqspf" target="_blank">江峰时刻</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/8?cvwraz" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?oknuyz#1" target="_blank">首页</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/1?chxgtzv" target="_blank">动态网</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/2?nhqgsatlw" target="_blank">大纪元</a> | <a href="https://d3twnfu6dd6xpm.cloudfront.net/4?bdbdmnpqw" target="_blank">看中国</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/pHh5q?xswqxnz" target="_blank">新生网</a> | <a href="https://d2oemtubh889hy.cloudfront.net/tktpt?iqzteckp" target="_blank">阿波罗网</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/Mjpvu?aqsdwvf" target="_blank">干净世界</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/10?qdkcpf" target="_blank">退党服务</a> | <a href="https://d2zw89wk00y815.cloudfront.net/Rffqf?spmhqsu" target="_blank">明慧广播</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/nw9Vn?tatmn" target="_blank">传奇时代</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/AF9AG?ooaswmys" target="_blank">新境界影视</a> | <a href="https://d2oemtubh889hy.cloudfront.net/zqMQA?cxcnoafx" target="_blank">文昭谈论</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/7?nbsjala" target="_blank">明慧</a></p><p><a href="https://d3abchfok6e2j.cloudfront.net/9?lujmyjgxk" target="_blank">大法</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/3?ihsgvrrin" target="_blank">新唐人</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/obAhT?krcwftv" target="_blank">人民报</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/xXNHu?uhhevkv" target="_blank">放光明</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/5?owbjy" target="_blank">新纪元</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/6?dgeiyjf" target="_blank">希望之声</a> | <a href="https://d3bo5docy69ast.cloudfront.net/11?uevunfdpj" target="_blank">无界网络</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/Pueji?bukahaze" target="_blank">追查国际</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/16?lhoje" target="_blank">明慧之窗</a> | <a href="https://d3gus727acem18.cloudfront.net/LdvzZ?efsfxbdw" target="_blank">细语人生</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/fBn3r?tvkjav" target="_blank">新世纪影视</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/PUWMb?fbphgd" target="_blank">江峰时刻</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/8?lfbxtwye" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652500.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2025/12/id14652623-GettyImages-2250368714-320x200.jpg"><p align="center">川普全国巡回演讲首站 强调降物价涨薪资</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652500.md#1" title="川普全国巡回演讲首站 强调降物价涨薪资""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/12/id14652623-GettyImages-2250368714-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652521.md#1" title="《富爸爸》作者：共产主义渗透致经济失序""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/12/id14652538-EpochImages-5033553883-xl-w-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650941.md#1" title="专访陈光诚：中共为何害怕高智晟""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-540887752-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652086.md#1" title="川普促泽连斯基接受现实 结束战争""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/09/id14601256-GettyImages-2236957144-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652402.md#1">美国2025年五大室内设计趋势 提升房屋价值</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652815.md#1">【重播】众议院民主党高层举行记者会</a><br>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652804.md#1">【重播】众议院议长等共和党高层举行记者会</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652781.md#1">委国反对派领袖马查多获诺奖 女儿代她领奖</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652777.md#1">中国多地无人机黑飞至8000米高空 民忧航线安全</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652402.md#1">美国2025年五大室内设计趋势 提升房屋价值</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652815.md#1">【重播】众议院民主党高层举行记者会</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652804.md#1">【重播】众议院议长等共和党高层举行记者会</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652781.md#1">委国反对派领袖马查多获诺奖 女儿代她领奖</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652777.md#1">中国多地无人机黑飞至8000米高空 民忧航线安全</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652790.md#1">伊利诺伊州推出新法 抵制川普政府移民执法</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652792.md#1">【直播】小肯尼迪与奥兹发表“让美国健康起来”</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652772.md#1">墨西哥众院批准提高对华关税 最高达50%</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652788.md#1">【直播】参议院听证会：审议军备竞赛</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652787.md#1">【直播】宗教自由委员会：军队中的宗教自由</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652787.md#1">【直播】宗教自由委员会：军队中的宗教自由</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651056.md#1">汪洋大秘毕井泉被双开 曾因问题疫苗“背锅”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a><br>
@@ -105,13 +105,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646907.md#1">分析：中共有三大死结 难以和美国抗衡</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646847.md#1">【百年真相】卧底30年 冀朝鼎祸乱民国经济</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646878.md#1">德州对Shein展开劳工和产品安全调查</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3en83rx6r2fsj.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3en83rx6r2fsj.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,590</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d28ncqluabc8tp.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d28ncqluabc8tp.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,590</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 455,524,538 人
+!共 455,524,814 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652040.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/07/10-xie-yanyi-and-yuan-shanshan-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652040.md#1">中国人权律师谢燕益起诉“国铁”侵犯隐私权</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651896.md#1">高瑜因香港大火批港府 遭大陆警察上门做笔录</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651628.md#1">重庆访民报警反被抓 群众阻拦 警察最终放人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651574.md#1">四川徐欣蕊被关精神病院案 官方报告惹质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649469.md#1">知情人揭武汉女监设“疯子队”“特警队”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650834.md#1">四川公民吉腾富参加宪法交流被拘留8天</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652772.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480572-AFP__20250402__38UH8P3__v1__Preview__MexicoPoliticsSheinbaumPresser-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652772.md#1">墨西哥众院批准提高对华关税 最高达50%</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652431.md#1">大陆多地公务员被要求补缴三年的社保欠款</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652022.md#1">大陆券商“保代”突击入股 被量刑10年 引关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651978.md#1">福特和雷诺联手 抵御廉价中国车涌入欧洲</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651814.md#1">A股普跌 沪深两市单日缩量1327亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651693.md#1">分析：中共“以邻为壑”贸易模式能走多远</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652677.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/12/id14650174-GettyImages-2248983008-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652677.md#1">分析：美国家安全战略将台湾问题清晰化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652737.md#1">从云南贪到西藏 正部级“老虎”齐扎拉被公诉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652612.md#1">中共海关总署前副署长孙玉宁获刑13年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652614.md#1">中共国台办批台禁小红书 反遭媒体问翻墙问题</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652455.md#1">小红书今年涉诈案756件 台警方揭诈骗手法</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652390.md#1">中共军事骚扰日韩 赖清德：反对破坏区域和平</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652292.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/12/id14652309-FotoJet-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652292.md#1">呼和浩特一烧烤店深夜起火 整座楼被大火包裹</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652278.md#1">唐山今日凌晨发生2.3级地震 引发关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651228.md#1">株洲哈啰自动驾驶出租车撞人 伤者送ICU</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650783.md#1">一名中国女游客在马来西亚酒店坠亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650377.md#1">河南三门峡一项目工程施工中塌方 5人遇难</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652777.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276206-690560-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652777.md#1">中国多地无人机黑飞至8000米高空 民忧航线安全</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652753.md#1">西班牙女员工连续提前到岗被开除 中国网民羡慕</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652613.md#1">重庆巫溪一棵黄桷树突然倒掉 4人被砸伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652536.md#1">湖北疫苗受害者长期遭打压 身心疲惫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652426.md#1">英制裁两中企 指其对全球发动无差别网攻</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652433.md#1">辽宁一幼儿园15天虐童上千次 家长发声</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648814.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/10/id14610627-800024-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648814.md#1">淘宝、支付宝、闲鱼同步崩溃 客服大排队</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648090.md#1">中国朱雀三号火箭回收试验失败 发生异常燃烧</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644041.md#1">新唐人油画大赛参赛人数和作品质量创新高</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642233.md#1">中国知名婴童品牌被检出细菌超标48倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641253.md#1">辽宁11岁男孩摆摊 知情人：6岁已辍学照顾病父</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639637.md#1">中国2026届大学毕业生人数再创新高 预计1270万</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635481.md#1">【独家】中共国家安全部第十局起底</a><br>
